--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
-    "express-openid-connect": "^2.18.1"
+    "express-openid-connect": "^2.18.1",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0"
   }
 }
