--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "express": "^5.1.0",
     "express-openid-connect": "^2.18.1",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
