--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,10 @@
     "express-openid-connect": "^2.18.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
+
+  
 }
