--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "dev:seed": "node dev/devSeed.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +19,7 @@
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "nodemon": "^3.1.10"
   }
-
-  
 }
