--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-openid-connect": "^2.18.1",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
