--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "backend",
+  "name": "cgi-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "dev:seed": "node dev/devSeed.js"
+    "start": "node index.js",
+    "dev": "cross-env DEV_MODE=true nodemon index.js",
+    "prod": "cross-env DEV_MODE=false nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
     "chalk": "^4.1.2",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.2",
-    "express-openid-connect": "^2.18.1",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
+    "express-openid-connect": "^2.5.0",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "nodemon": "^3.1.10"
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.22"
   }
 }
