--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "express": "^5.1.0",
     "express-openid-connect": "^2.18.1",
     "lucide-react": "^0.511.0",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "cross-env REACT_APP_DEV_MODE=true PORT=3001 react-scripts start",
+    "prod": "cross-env REACT_APP_DEV_MODE=false PORT=3001 react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
